--- a/Translations/German/text-improvement-change.xml
+++ b/Translations/German/text-improvement-change.xml
@@ -2,7 +2,7 @@
 <!-- edited with XMLSpy v2014 rel. 2 (x64) (http://www.altova.com) by Soren Johnson (private) -->
 <Root>
 	<!--Assets/GameAssets/Resources/Infos/improvement.xml-->
-	<!--NOTE: improvement names that are mass nouns or plural do not need multiple types in Translation-->
+	<!--NOTE: improvement names that are mass nouns or plural do not need multiple types in English-->
 	<Entry>
 		<zType/>
 		<Translation/>
@@ -224,7 +224,7 @@
 		<Translation>Schrein der Athene</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_IMPROVEMENT_SHRINE_SHAMAHS</zType>
+		<zType>TEXT_IMPROVEMENT_SHRINE_SHAMASH</zType>
 		<Translation>Schrein der Shamahs</Translation>
 	</Entry>
 	<Entry>
