--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -1125,16 +1125,16 @@
 		<Translation>Sagenumworben Staatskasse, Gericht und Archiv</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_GOAL_THREE_BARB_CLEARED</zType>
-		<Translation>Beseitige drei Barbaren Plätze</Translation>
+		<zType>TEXT_GOAL_THREE_TRIBE_CLEARED</zType>
+		<Translation>Beseitige drei Stammes Plätze</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_GOAL_FIVE_BARB_CLEARED</zType>
-		<Translation>Beseitige fünf Barbaren Plätze</Translation>
+		<zType>TEXT_GOAL_FIVE_TRIBE_CLEARED</zType>
+		<Translation>Beseitige fünf Stammes Plätze</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_GOAL_SEVEN_BARB_CLEARED</zType>
-		<Translation>Beseitige sieben Barbaren Plätze</Translation>
+		<zType>TEXT_GOAL_SEVEN_TRIBE_CLEARED</zType>
+		<Translation>Beseitige sieben Stammes Plätze</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_GOAL_TRIBE_PEACE</zType>
@@ -1165,7 +1165,7 @@
 		<Translation>Nehme vier fremde Städte ein</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_GOAL_ONE_CAPTIAL</zType>
+		<zType>TEXT_GOAL_ONE_CAPITAL</zType>
 		<Translation>Nehme eine fremde Hauptstadt ein</Translation>
 	</Entry>
 	<Entry>
@@ -1397,11 +1397,11 @@
 		<Translation>Decke 80% der Karte auf</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_GOAL_CAPTURE_THREE_CITIES</zType>
+		<zType>TEXT_GOAL_THREE_CITIES_FOREIGN</zType>
 		<Translation>Erobere drei Städte</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_GOAL_CAPTURE_FOUR_CITIES</zType>
+		<zType>TEXT_GOAL_FOUR_CITIES_FOREIGN</zType>
 		<Translation>Erobere vier Städte</Translation>
 	</Entry>
 	<Entry>
@@ -1895,7 +1895,7 @@
 	<!--InfoYield.Help-->
 	<Entry>
 		<zType>TEXT_YIELD_GROWTH_HELP</zType>
-		<Translation>Wenn das {YIELD_GROWTH} einer Stadt steigt, bekommt die Stadt einen neuen Bürger. Grundlegende Wege um {YIELD_GROWTH} zu steigern beinhaltet das ausbilden von link(SPECIALIST_FARMER,2) und bauen von link(IMPROVEMENTCLASS_BATHS,2).</Translation>
+		<Translation>Wenn das link(YIELD_GROWTH){YIELD_GROWTH} einer Stadt steigt, bekommt die Stadt einen neuen Bürger. Grundlegende Wege um {link(YIELD_GROWTH){YIELD_GROWTH} zu steigern beinhaltet das ausbilden von link(SPECIALIST_FARMER,2) und bauen von link(IMPROVEMENTCLASS_BATHS,2).</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_CIVICS_HELP</zType>
@@ -1903,30 +1903,30 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_TRAINING_HELP</zType>
-		<Translation>Wird benutzt um Militäreinheiten auszubilden. Unbenutzes {YIELD_TRAINING} wird dem nationalen Vorrat beigefügt, welches benutzt werden kann um Einheiten zu befördern und zu verbessern. Verstärke {YIELD_TRAINING} durch den Bau von link(IMPROVEMENT_BARRACKS,2) und link(IMPROVEMENT_RANGE,2).</Translation>
+		<Translation>Wird benutzt um Militäreinheiten auszubilden. Unbenutzes link(YIELD_TRAINING){YIELD_TRAINING} wird dem nationalen Vorrat beigefügt, welches benutzt werden kann um Einheiten zu befördern und zu verbessern. Verstärke link(YIELD_TRAINING){YIELD_TRAINING} durch den Bau von link(IMPROVEMENT_BARRACKS,2) und link(IMPROVEMENT_RANGE,2).</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_CULTURE_HELP</zType>
-		<Translation>Wenn die {YIELD_CULTURE} einer Stadt sich erhöht, geschieht ein positives Ereignis. Die komplette {YIELD_CULTURE} der Stadt beeinflusst welche Verbesserungen und Wunder gebaut werden können. Erhöhe {YIELD_CULTURE} durch den Bau von link(IMPROVEMENTCLASS_SHRINE,2) und link(IMPROVEMENTCLASS_THEATER,2).</Translation>
+		<Translation>Wenn die link(YIELD_CULTURE){YIELD_CULTURE} einer Stadt sich erhöht, geschieht ein positives Ereignis. Die komplette link(YIELD_CULTURE){YIELD_CULTURE} der Stadt beeinflusst welche Verbesserungen und Wunder gebaut werden können. Erhöhe link(YIELD_CULTURE){YIELD_CULTURE} durch den Bau von link(IMPROVEMENTCLASS_SHRINE,2) und link(IMPROVEMENTCLASS_ODEON,2).</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_DISCONTENT_HELP</zType>
-		<Translation>Städte schüren {YIELD_DISCONTENT} über die Zeit. Wenn die sich {YIELD_DISCONTENT} einer Stadt vermehrt, erhöht sich seine gesammtes {YIELD_DISCONTENT}, welches die {YIELD_MAINTENANCE} erhöht und {YIELD_GROWTH} reduziert. Benutze link(PROJECT_FESTIVAL,2) um Unruhen {YIELD_DISCONTENT} zu verringern.</Translation>
+		<Translation>Städte schüren link(YIELD_DISCONTENT){YIELD_DISCONTENT} über die Zeit. Wenn die sich link(YIELD_DISCONTENT){YIELD_DISCONTENT} einer Stadt vermehrt, erhöht sich seine gesammtes link(YIELD_DISCONTENT){YIELD_DISCONTENT}, welches die link(YIELD_MAINTENANCE){YIELD_MAINTENANCE} erhöht und link(YIELD_GROWTH){YIELD_GROWTH} reduziert. Benutze link(PROJECT_FESTIVAL,2) um Unruhen link(YIELD_DISCONTENT){YIELD_DISCONTENT} zu verringern.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_SCIENCE_HELP</zType>
-		<Translation>Wird benutzt um Technologien zu erforschen. Steigere {YIELD_SCIENCE} durch den Bau von link(PROJECT_ARCHIVE_1,2) und link(IMPROVEMENTCLASS_LIBRARY,2).</Translation>
+		<Translation>Wird benutzt um Technologien zu erforschen. Steigere link(YIELD_SCIENCE){YIELD_SCIENCE} durch den Bau von link(PROJECT_ARCHIVE_1,2) und link(IMPROVEMENTCLASS_LIBRARY,2).</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_MONEY_HELP</zType>
-		<Translation>Wird benutzt um andere Ressourcen zu kaufen. Steigert {YIELD_MONEY} durch den Bau von link(IMPROVEMENT_HAMLET,2) und link(IMPROVEMENTCLASS_MARKET,2).</Translation>
+		<Translation>Wird benutzt um andere Ressourcen zu kaufen. Steigert link(YIELD_MONEY){YIELD_MONEY} durch den Bau von link(IMPROVEMENT_HAMLET,2) und link(IMPROVEMENTCLASS_MARKET,2).</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_MAINTENANCE_HELP</zType>
-		<Translation>Mindert die Anzahl von {YIELD_MONEY} Einkommen die eine Stadt generiert. {YIELD_MAINTENANCE} kann verringert werden wenn die Stadt mit deiner Hauptstadt verbunden wird.</Translation>
+		<Translation>Mindert die Anzahl von link(YIELD_MONEY){YIELD_MONEY} Einkommen die eine Stadt generiert. link(YIELD_MAINTENANCE){YIELD_MAINTENANCE} kann verringert werden wenn die Stadt mit deiner Hauptstadt verbunden wird.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_ORDERS_HELP</zType>
-		<Translation>{YIELD_ORDERS} können für verschiedene Aktionen ausgegeben werden, wie etwa bewegen, angreifen und Verbesserungen bauen. Ungenutzte {YIELD_ORDERS} werden für {YIELD_MONEY} am Ende des Jahres verkauft.</Translation>
+		<Translation>link(YIELD_ORDERS){YIELD_ORDERS} können für verschiedene Aktionen ausgegeben werden, wie etwa bewegen, angreifen und Verbesserungen bauen. Ungenutzte {YIELD_ORDERS} werden für link(YIELD_MONEY){YIELD_MONEY} am Ende des Jahres verkauft.</Translation>
 	</Entry>
 </Root>
