--- a/Translations/German/text-project-event-change.xml
+++ b/Translations/German/text-project-event-change.xml
@@ -28,6 +28,10 @@
 		<Translation>Sigeszug</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_PROJECT_CULTURAL_APPROPRIATION</zType>
+		<Translation>Cultural Appropriation</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_PROJECT_PURPLE_DYE</zType>
 		<Translation>Lila Färbemittel</Translation>
 	</Entry>
